BugFix: vertically aligning the youtube player

--- a/docs/style.css
+++ b/docs/style.css
@@ -7137,14 +7137,15 @@ My Additions to the theme
 
 .youtube-player-popup {
   position: fixed;
-  width: 80%;
+  width: 75%;
   left: 50%;
   transform: translate(-50%, -100%);
   transition: all 300ms ease;
 }
 
 .youtube-player-overlay.active .youtube-player-popup {
-  transform: translate(-50%, 0);
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .youtube-player-popup iframe {
